address todos
add todos

tmp

add tests

address comments

remove unused import

add more unit tests

fix metadata

more

add ownerEmail environment variable
