# core/src/main/scala/org/broadinstitute/dsp/workbench/welder/model.scala
@@ -3,12 +3,15 @@ package org.broadinstitute.dsp.workbench.welder
 import java.nio.file.{Path, Paths}
 import java.time.Instant
 
+import fs2.Stream
 import cats.implicits._
 import io.circe.{Decoder, Encoder}
 import ca.mrvisser.sealerate
-import org.broadinstitute.dsde.workbench.google2.GcsBlobName
+import cats.effect.IO
+import org.broadinstitute.dsde.workbench.google2.{Crc32, GcsBlobName}
 import org.broadinstitute.dsde.workbench.model.WorkbenchEmail
 import org.broadinstitute.dsde.workbench.model.google.GcsBucketName
+import org.broadinstitute.dsp.workbench.welder.SourceUri.{DataUri, GsPath}
 import org.http4s.Uri
 
 sealed abstract class SyncStatus extends Product with Serializable
@@ -28,9 +31,32 @@ object SyncStatus {
 
   val stringToSyncStatus: Set[SyncStatus] = sealerate.values[SyncStatus]
 }
-final case class BucketNameAndObjectName(bucketName: GcsBucketName, blobName: GcsBlobName) {
-  override def toString: String = s"${bucketName.value}/${blobName.value}"
+
+sealed abstract class SyncMode extends Product with Serializable
+object SyncMode {
+  final case object Safe extends SyncMode {
+    override def toString: String = "SAFE"
+  }
+  final case object Edit extends SyncMode {
+    override def toString: String = "EDIT"
+  }
 }
+
+final case class BlobPath(asString: String) extends AnyVal
+
+sealed abstract class SourceUri
+object SourceUri {
+  final case class DataUri(data: Array[Byte]) extends SourceUri
+  final case class GsPath(bucketName: GcsBucketName, blobName: GcsBlobName) extends SourceUri {
+    override def toString: String = s"gs://${bucketName.value}/${blobName.value}"
+  }
+}
+
+final case class CloudStorageDirectory(bucketName: GcsBucketName, blobPath: BlobPath)
+
+final case class StorageLink(localBaseDirectory: Path, localSafeModeBaseDirectory: Path, cloudStorageDirectory: CloudStorageDirectory, pattern: String)
+
+final case class GcsMetadata(lastLockedBy: Option[WorkbenchEmail], ExpiresAt: Option[Instant], crc32c: Crc32, generation: Long)
 
 object JsonCodec {
   implicit val localObjectPathDecoder: Decoder[Path] = Decoder.decodeString.emap(s => Either.catchNonFatal(Paths.get(s)).leftMap(_.getMessage))
@@ -38,9 +64,29 @@ object JsonCodec {
   implicit val workbenchEmailEncoder: Encoder[WorkbenchEmail] = Encoder.encodeString.contramap(_.value)
   implicit val uriEncoder: Encoder[Uri] = Encoder.encodeString.contramap(_.renderString)
   implicit val uriDecoder: Decoder[Uri] = Decoder.decodeString.emap(s => Uri.fromString(s).leftMap(_.getMessage()))
-  implicit val instanceEncoder: Encoder[Instant] = Encoder.encodeLong.contramap(_.toEpochMilli) //TODO: shall we make this easier for user to read
+  implicit val instanceEncoder: Encoder[Instant] = Encoder.encodeLong.contramap(_.toEpochMilli)
   implicit val syncStatusEncoder: Encoder[SyncStatus] = Encoder.encodeString.contramap(_.toString)
   implicit val gcsBucketNameEncoder: Decoder[GcsBucketName] = Decoder.decodeString.map(GcsBucketName)
   implicit val gcsBlobNameEncoder: Decoder[GcsBlobName] = Decoder.decodeString.map(GcsBlobName)
-  implicit val bucketNameAndObjectName: Decoder[BucketNameAndObjectName] = Decoder.decodeString.emap(parseGsDirectory)
+  implicit val gsPathDecoder: Decoder[GsPath] = Decoder.decodeString.emap(parseGsPath)
+  implicit val gsPathEncoder: Encoder[GsPath] = Encoder.encodeString.contramap(_.toString)
+  implicit val cloudStorageDirectoryDecoder: Decoder[CloudStorageDirectory] = Decoder.decodeString.emap(s => parseGsPath(s).map(x => CloudStorageDirectory(x.bucketName, BlobPath(x.blobName.value))))
+  implicit val cloudStorageDirectoryEncoder: Encoder[CloudStorageDirectory] = Encoder.encodeString.contramap(_.toString)
+  implicit val sourceUriDecoder: Decoder[SourceUri] = Decoder.decodeString.emap { s =>
+    if (s.startsWith("data:application/json;base64,")) {
+      val res = for {
+        encodedData <- Either.catchNonFatal(s.split(",")(1))
+        data <- Either.catchNonFatal(Stream.emit(encodedData).through(base64DecoderPipe[IO]).compile.to[Array].unsafeRunSync())
+      } yield DataUri(data)
+
+      res.leftMap(_.getMessage)
+    } else parseGsPath(s)
+  }
+  implicit val storageLinkEncoder: Encoder[StorageLink] =
+    Encoder.forProduct4("localBaseDirectory", "localSafeModeBaseDirectory", "cloudStorageDirectory", "pattern")(storageLink => StorageLink.unapply(storageLink).get)
+
+  implicit val storageLinkDecoder: Decoder[StorageLink] =
+    Decoder.forProduct4("localBaseDirectory", "localSafeModeBaseDirectory", "cloudStorageDirectory", "pattern")(StorageLink.apply)
+
+  implicit val syncModeEncoder: Encoder[SyncMode] = Encoder.encodeString.contramap(_.toString)
 }
